fix: z-index

--- a/src/components/pages/shop/remote-shop/SingleCard.css
+++ b/src/components/pages/shop/remote-shop/SingleCard.css
@@ -34,7 +34,7 @@
 
 .ReactModal__Overlay--after-open {
   opacity: 1;
-  z-index: 11;
+  z-index: 7;
 }
 
 .ReactModal__Overlay--before-close {
